fix: changed the name to auto_scroll.js from app.js

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,6 @@
   </head>
   <body>
     <%= yield %>
-    <script src="/js/app.js"></script>
+    <script src="/js/auto_scroll.js"></script>
   </body>
 </html>
